# Socket-Project

./: README.md  pyproject.toml
src/: NAMESserver.py  TCPserver.py  UDPserver.py  cliente.py
